# CW_6

./: ENV_TEMPLATES  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  task.py  urls.py  views.py
mailings/management/commands/: send_mail.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailings_options.py
mailings/templates/: base.html  header.html
mailings/templates/clients/: clients_confirm_delete.html  clients_detail.html  clients_form.html  clients_list.html
mailings/templates/mailings/: mailings_confirm_delete.html  mailings_detail.html  mailings_form.html  mailings_list.html
mailings/templates/message/: message_confirm_delete.html  message_detail.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_is_active.py
users/templates/: login.html
users/templates/users/: error_reset_password.html  success_reset_password.html  user_form.html  user_list.html
